--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+@font-face {
+  font-family: 'draft';
+  src: url("./fonts/Draft B Regular.otf"); }
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
@@ -10726,5 +10729,28 @@ readers do not read off random characters that represent icons */
 body, html {
   height: 100%;
   width: 100%; }
+
+section .section {
+  margin-bottom: 3%; }
+  section .section h1 {
+    font-size: 16px;
+    font-family: 'Open Sans';
+    margin-top: 8px; }
+  section .section p {
+    font-size: 15px;
+    font-family: "Rubik";
+    margin-bottom: 6px; }
+
+footer img {
+  width: 100%;
+  max-width: 240px; }
+footer li {
+  list-style: none;
+  font-size: 16px;
+  line-height: 2.7rem;
+  font-family: 'Trebuchet MS', sans-serif;
+  font-weight: 400; }
+  footer li a {
+    color: #333; }
 
 /*# sourceMappingURL=main.css.map */
