--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'draft';
+    src: url("./fonts/Draft B Regular.otf");
+}
+
 $body-color: #373a3c;
 
 
@@ -10,4 +15,43 @@ $body-color: #373a3c;
 body, html {
     height: 100%;
     width: 100%;
+}
+
+section {
+
+    .section {
+        margin-bottom: 3%;
+
+        h1 {
+            font-size: 16px;
+            font-family: 'Open Sans';
+            margin-top: 8px;
+        }
+
+        p {
+            font-size: 15px;
+            font-family: "Rubik";
+            margin-bottom: 6px;
+        }
+    }
+}
+
+footer {
+
+    img {
+        width: 100%;
+        max-width: 240px;
+    }
+
+    li {
+        list-style: none;
+        font-size: 16px;
+        line-height: 2.7rem;
+        font-family: 'Trebuchet MS', sans-serif;
+        font-weight: 400;
+
+        a {
+            color: #333;
+        }
+    }
 }
