--- a/css/main.css
+++ b/css/main.css
@@ -119,11 +119,10 @@
   font-family: "MavenPro-Bold";
   src: url("./fonts/MavenPro-Bold.ttf") format("truetype");
   font-weight: 700; }
-font-face {
+@font-face {
   font-family: "Mukta-Regular";
   src: url("./fonts/Mukta-Regular.ttf") format("truetype");
   font-weight: 400; }
-
 @font-face {
   font-family: "Mukta-Medium";
   src: url("./fonts/Mukta-Medium.ttf") format("truetype");
@@ -135,6 +134,58 @@ font-face {
 @font-face {
   font-family: "Mukta-Bold";
   src: url("./fonts/Mukta-Bold.ttf") format("truetype");
+  font-weight: 700; }
+@font-face {
+  font-family: "Montserrat-Regular";
+  src: url("./fonts/Montserrat-Regular.ttf") format("truetype");
+  font-weight: 400; }
+@font-face {
+  font-family: "Montserrat-Medium";
+  src: url("./fonts/Montserrat-Medium.ttf") format("truetype");
+  font-weight: 500; }
+@font-face {
+  font-family: "Montserrat-SemiBold";
+  src: url("./fonts/Montserrat-SemiBold.ttf") format("truetype");
+  font-weight: 600; }
+@font-face {
+  font-family: "Montserrat-Bold";
+  src: url("./fonts/Montserrat-Bold.ttf") format("truetype");
+  font-weight: 700; }
+@font-face {
+  font-family: "Roboto-Regular";
+  src: url("./fonts/Roboto-Regular.ttf") format("truetype");
+  font-weight: 400; }
+@font-face {
+  font-family: "Roboto-Medium";
+  src: url("./fonts/Roboto-Medium.ttf") format("truetype");
+  font-weight: 500; }
+@font-face {
+  font-family: "Roboto-Bold";
+  src: url("./fonts/Roboto-Bold.ttf") format("truetype");
+  font-weight: 700; }
+@font-face {
+  font-family: "Rubik-Regular";
+  src: url("./fonts/Rubik-Regular.ttf") format("truetype");
+  font-weight: 400; }
+@font-face {
+  font-family: "Rubik-Medium";
+  src: url("./fonts/Rubik-Medium.ttf") format("truetype");
+  font-weight: 500; }
+@font-face {
+  font-family: "Rubik-Bold";
+  src: url("./fonts/Rubik-Bold.ttf") format("truetype");
+  font-weight: 700; }
+@font-face {
+  font-family: "Ubuntu-Regular";
+  src: url("./fonts/Ubuntu-Regular.ttf") format("truetype");
+  font-weight: 400; }
+@font-face {
+  font-family: "Ubuntu-Medium";
+  src: url("./fonts/Ubuntu-Medium.ttf") format("truetype");
+  font-weight: 500; }
+@font-face {
+  font-family: "Ubuntu-Bold";
+  src: url("./fonts/Ubuntu-Bold.ttf") format("truetype");
   font-weight: 700; }
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
@@ -588,18 +639,15 @@ pre {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto; }
-  @media (min-width: 576px) {
-    .container {
-      max-width: 540px; } }
   @media (min-width: 768px) {
     .container {
-      max-width: 720px; } }
+      max-width: 820px; } }
   @media (min-width: 992px) {
     .container {
-      max-width: 960px; } }
+      max-width: 1000px; } }
   @media (min-width: 1200px) {
     .container {
-      max-width: 1140px; } }
+      max-width: 1200px; } }
 
 .container-fluid {
   width: 100%;
@@ -10878,19 +10926,24 @@ header .nav-wrapper {
     font-size: 14px;
     margin-top: 4rem;
     margin-bottom: 0; }
+  header .nav-wrapper .nav-link {
+    padding: 0.5rem 0.5rem;
+    color: antiquewhite; }
 header .navigation {
   background-color: #0D3250;
   border-bottom: 1px solid #245C89; }
   header .navigation .navbar .navbar-toggler {
     cursor: pointer;
-    outline: 0;
-    background: #fff; }
-  header .navigation .navbar .nav-link {
-    font-size: 14px;
-    color: #fff;
-    font-family: "Open Sans"; }
+    outline: 0; }
+  header .navigation .navbar .navbar-toggler-icon {
+    width: 2rem;
+    height: 2rem; }
   header .navigation .navbar .nav-item {
-    padding: 0.2rem 1rem; }
+    padding: 0.4rem 1rem; }
+  header .navigation .navbar .nav-link {
+    font-size: 15px;
+    color: #fff;
+    font-family: "Ubuntu-Regular"; }
 
 .row-wrapper {
   background-color: #0D3250;
@@ -10900,7 +10953,7 @@ header .navigation {
   position: relative;
   width: 100%;
   color: #fff;
-  padding: 3rem 0; }
+  padding: 4.2rem 0; }
   .row-wrapper h1 {
     font-size: 54px;
     font-weight: 700;
@@ -10909,8 +10962,5 @@ header .navigation {
     font-size: 20px;
     font-family: "Open Sans";
     font-weight: 300; }
-  @media (max-width: 544px) {
-    .row-wrapper h2.lead {
-      font-size: 16px; } }
 
 /*# sourceMappingURL=main.css.map */
