--- a/css/main.css
+++ b/css/main.css
@@ -10963,4 +10963,10 @@ header .navigation {
     font-family: "Open Sans";
     font-weight: 300; }
 
+.overview {
+  color: #fff;
+  background: -webkit-linear-gradient(-45deg, #6e1a52, #ec5252); }
+  .overview h1 {
+    margin-top: 1.5rem; }
+
 /*# sourceMappingURL=main.css.map */
