--- a/css/main.scss
+++ b/css/main.scss
@@ -344,6 +344,14 @@ header {
         font-size: 20px;
         font-family: "Open Sans";
         font-weight: 300;
+    }   
+}
+
+.overview {
+    color: #fff;
+    background: -webkit-linear-gradient(-45deg,#6e1a52,#ec5252);
+
+    h1 {
+        margin-top: 1.5rem;
     }
-    
 }
