--- a/css/main.css
+++ b/css/main.css
@@ -10919,16 +10919,12 @@ header .nav-wrapper {
   header .nav-wrapper .nav-brand {
     height: 100px;
     width: 330px;
-    padding: 10px;
-    margin-top: 14px; }
+    padding: 10px; }
   header .nav-wrapper h2 {
     color: #fff;
-    font-size: 14px;
-    margin-top: 4rem;
-    margin-bottom: 0; }
+    font-size: 14px; }
   header .nav-wrapper .nav-link {
-    padding: 0;
-    color: antiquewhite; }
+    color: #eca93f; }
 header .navigation {
   background-color: #0D3250;
   border-bottom: 1px solid #245C89; }
@@ -10942,8 +10938,12 @@ header .navigation {
     padding: 0.4rem 1rem; }
   header .navigation .navbar .nav-link {
     font-size: 15px;
-    color: #fff;
-    font-family: "Ubuntu-Regular"; }
+    color: antiquewhite;
+    font-family: "Ubuntu-Regular";
+    text-transform: uppercase; }
+  @media (max-width: 576px) {
+    header .navigation .nav-link {
+      text-align: center; } }
 
 .hero {
   background-color: #0D3250;
@@ -10971,7 +10971,7 @@ header .navigation {
   color: #fff;
   background: -webkit-linear-gradient(-45deg, #6e1a52, #ec5252); }
   .overview h1 {
-    margin-top: 1.5rem; }
+    font-size: 18px; }
 
 .sec1 h2 {
   font-size: 40px;
