--- a/css/main.scss
+++ b/css/main.scss
@@ -279,19 +279,15 @@ header {
             height: 100px;
             width: 330px;
             padding: 10px;
-            margin-top: 14px;
         }
 
         h2 {
             color: #fff;
             font-size: 14px;
-            margin-top: 4rem;
-            margin-bottom: 0;
         }
 
         .nav-link {
-            padding: 0;
-            color: antiquewhite;
+            color: #eca93f;
         }
     }
 
@@ -317,9 +313,14 @@ header {
 
             .nav-link {
                 font-size: 15px;
-                color: #fff;
+                color: antiquewhite;
                 font-family: "Ubuntu-Regular";
+                text-transform: uppercase;
             }
+        }
+
+        @media (max-width: 576px) {
+            .nav-link {text-align: center; }  
         }
     }
 }
@@ -359,7 +360,7 @@ header {
     background: -webkit-linear-gradient(-45deg,#6e1a52,#ec5252);
 
     h1 {
-        margin-top: 1.5rem;
+        font-size: 18px;
     }
 }
 
