--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "Asap-Regular";
+    font-family: "Asap";
     src: url("./fonts/Asap-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -20,7 +20,7 @@
 }
 
 @font-face {
-    font-family: "Cabin-Regular";
+    font-family: "Cabin";
     src: url("./fonts/Cabin-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -41,7 +41,7 @@
 }
 
 @font-face {
-    font-family: "Catamaran-Regular";
+    font-family: "Catamaran";
     src: url("./fonts/Catamaran-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -62,7 +62,7 @@
 }
 
 @font-face {
-    font-family: "Dosis-Regular";
+    font-family: "Dosis";
     src: url("./fonts/Dosis-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -83,34 +83,13 @@
 }
 
 @font-face {
-    font-family: "Exo-Regular";
-    src: url("./fonts/Exo-Regular.ttf") format("truetype");
-    font-weight: 400;
-}
-@font-face {
-    font-family: "Exo-Medium";
-    src: url("./fonts/Exo-Medium.ttf") format("truetype");
-    font-weight: 500;
-}
-@font-face {
-    font-family: "Exo-SemiBold";
-    src: url("./fonts/Exo-SemiBold.ttf") format("truetype");
-    font-weight: 600;
-}
-@font-face {
-    font-family: "Exo-Bold";
-    src: url("./fonts/Exo-Bold.ttf") format("truetype");
-    font-weight: 700;
-}
-
-@font-face {
     font-family: 'draft';
     src: url("./fonts/Draft B Regular.otf") format("truetype");
     font-weight: 400;
 }
 
 @font-face {
-    font-family: "Kanit-Regular";
+    font-family: "Kanit";
     src: url("./fonts/Kanit-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -131,7 +110,7 @@
 }
 
 @font-face {
-    font-family: "Lato-Regular";
+    font-family: "Lato";
     src: url("./fonts/Lato-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -142,7 +121,7 @@
 }
 
 @font-face {
-    font-family: "MavenPro-Regular";
+    font-family: "MavenPro";
     src: url("./fonts/MavenPro-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -158,7 +137,7 @@
 }
 
 @font-face {
-    font-family: "Mukta-Regular";
+    font-family: "Mukta";
     src: url("./fonts/Mukta-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -179,7 +158,7 @@
 }
 
 @font-face {
-    font-family: "Montserrat-Regular";
+    font-family: "Montserrat";
     src: url("./fonts/Montserrat-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -200,7 +179,7 @@
 }
 
 @font-face {
-    font-family: "Roboto-Regular";
+    font-family: "Roboto";
     src: url("./fonts/Roboto-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -216,7 +195,7 @@
 }
 
 @font-face {
-    font-family: "Rubik-Regular";
+    font-family: "Rubik";
     src: url("./fonts/Rubik-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -232,7 +211,7 @@
 }
 
 @font-face {
-    font-family: "Ubuntu-Regular";
+    font-family: "Ubuntu";
     src: url("./fonts/Ubuntu-Regular.ttf") format("truetype");
     font-weight: 400;
 }
@@ -254,6 +233,11 @@ $container-max-widths: (
   lg: 1000px,
   xl: 1200px
 );
+
+$display3-size:               2.7rem;
+$display4-size:               2rem;
+
+$display3-weight:             500;
 
 
 @import "../node_modules/bootstrap/scss/bootstrap";
@@ -314,13 +298,15 @@ header {
             .nav-link {
                 font-size: 15px;
                 color: antiquewhite;
-                font-family: "Ubuntu-Regular";
+                font-family: "Ubuntu";
                 text-transform: uppercase;
             }
         }
 
-        @media (max-width: 576px) {
-            .nav-link {text-align: center; }  
+        @include media-breakpoint-up(xs) {
+            .nav-link {
+              text-align: center;
+            }
         }
     }
 }
@@ -364,12 +350,26 @@ header {
     }
 }
 
-.sec1 {
+.wrap {
 
-    h2 {
-        font-size: 40px;
-        color: #3A679D;
-        margin-bottom: 10px;
-        text-align: left;
+    h1 {
+        font-family: "Asap-Medium";
+        color: #245C89;
+    }
+}
+
+footer {
+    background: #0D3250;
+    color: antiquewhite;
+    font-family: 'Trebuchet MS';
+
+    h5 {
+        text-transform: uppercase;
+    }
+
+    .nav-link {
+        font-size: 15px;
+        color: antiquewhite;
+        font-family: "Ubuntu";
     }
 }
